[tool.poetry]
name = "wirestock-auto"
version = "0.1.0"
description = ""
authors = ["Denis Malin <denis@malina.page>"]
readme = "README.md"
packages = [{include = "wirestock_auto"}]

[tool.poetry.dependencies]
python = "^3.11"
aio-clients = "^1.0.0"
openai = "^0.27.8"
pillow = "^10.0.0"
revchatgpt = "^6.7.6"
google-cloud-vision = "^3.4.4"
geopy = "^2.3.0"
jupyterlab = "^4.0.3"
matplotlib = "^3.7.2"
pandas = "^2.0.3"
pydantic-settings = "^2.0.2"
notebook = "^7.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
